# braitenbot-gui

./: .gitignore  .impeccable.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  collab-sync-design.md  eslint.config.js  index.html  package-lock.json  package.json  plan.md  playground.html  todo.md  vite.config.ts  vite.playground.config.ts
.changeset/: allow-unconnected-outputs.md  app-icon.md  basic-multiply.md  collab-sync.md  duplicate-names-warn.md  hardware-test-sketch.md  i2c-color-sensor-robustness.md  min-max-nodes.md  photocell-invert-default.md  pulse-capture-digital-inputs.md  pulse-capture-pin-validation.md  repo-review-improvements.md  settings-weight-cap.md  toolbar-and-palette-ux.md  trace-perf.md  trace-pulse-duration.md  windows-drivers.md
.github/workflows/: ci.yml  deploy.yml  docs-check.yml  pr-build.yml  release.yml  version.yml
3mf/: 00 - wheel.3mf
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
docs/docs/: intro.md  quick-reference.md  teaching-with-braitenbot.md  under-the-hood.md
docs/scripts/: check-badge-overlaps.ts  check-node-overlaps.ts  diagramExtract.ts  (+1 more)
hardware-test/: README.md  config.h  hardware-test.ino
relay/: tsconfig.build.json  tsconfig.json
scripts/: fetch-arduino-cli.mjs  fetch-latest-release.mjs  stage-docs.mjs  tag-release.mjs
src/: App.css  App.tsx  main.tsx  pwa-register-stub.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: arduino.rs  diagram_io.rs  lib.rs  main.rs
(+191 files in other folders)
