[package]
name = "braitenbot-gui"
version = "0.1.0"
description = "BraitenBot GUI — visually design and upload Braitenberg vehicles"
authors = ["Josh de Leeuw"]
edition = "2021"

[lib]
name = "braitenbot_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
